@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Polyhedron.hh,v 1.7 2000-02-23 16:57:36 johna Exp $
+// $Id: G4Polyhedron.hh,v 1.8 2000-03-30 16:01:41 stesting Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 #ifndef G4POLYHEDRON_HH
@@ -102,12 +102,30 @@ public:
 class G4PolyhedronBox: public G4Polyhedron {
 public:
   G4PolyhedronBox (G4double dx, G4double dy, G4double dz);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronCone: public G4Polyhedron {
 public:
   G4PolyhedronCone (G4double Rmn1, G4double Rmx1, 
                     G4double Rmn2, G4double Rmx2, G4double Dz);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronCons: public G4Polyhedron {
@@ -115,12 +133,30 @@ public:
   G4PolyhedronCons (G4double Rmn1, G4double Rmx1, 
                     G4double Rmn2, G4double Rmx2, G4double Dz,
                     G4double Phi1, G4double Dphi);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronPara: public G4Polyhedron {
 public:
   G4PolyhedronPara (G4double Dx, G4double Dy, G4double Dz,
                     G4double Alpha, G4double Theta, G4double Phi);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronPcon: public G4Polyhedron {
@@ -129,6 +165,15 @@ public:
                     const G4double *z,
                     const G4double *rmin,
                     const G4double *rmax);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronPgon: public G4Polyhedron {
@@ -137,6 +182,15 @@ public:
                     const G4double *z,
                     const G4double *rmin,
                     const G4double *rmax);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronSphere: public G4Polyhedron {
@@ -144,12 +198,30 @@ public:
   G4PolyhedronSphere (G4double rmin, G4double rmax,
                       G4double phi, G4double dphi,
                       G4double the, G4double dthe);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronTorus: public G4Polyhedron {
 public:
   G4PolyhedronTorus (G4double rmin, G4double rmax, G4double rtor,
                     G4double phi, G4double dphi);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronTrap: public G4Polyhedron {
@@ -159,29 +231,74 @@ public:
                     G4double Dx1, G4double Dx2, G4double Alp1,
                     G4double Dy2,
                     G4double Dx3, G4double Dx4, G4double Alp2);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronTrd1: public G4Polyhedron {
 public:
   G4PolyhedronTrd1 (G4double Dx1, G4double Dx2,
                     G4double Dy, G4double Dz);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronTrd2: public G4Polyhedron {
 public:
   G4PolyhedronTrd2 (G4double Dx1, G4double Dx2,
                     G4double Dy1, G4double Dy2, G4double Dz);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronTube: public G4Polyhedron {
 public:
   G4PolyhedronTube (G4double Rmin, G4double Rmax, G4double Dz);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 class G4PolyhedronTubs: public G4Polyhedron {
 public:
   G4PolyhedronTubs (G4double Rmin, G4double Rmax, G4double Dz, 
                     G4double Phi1, G4double Dphi);
+  virtual G4Visible& operator = (const G4Visible& from) {
+    return G4Visible::operator = (from);
+  }
+  virtual G4VVisPrim& operator = (const G4VVisPrim& from) {
+    return G4VVisPrim::operator = (from);
+  }
+  virtual HepPolyhedron& operator = (const HepPolyhedron& from) {
+    return HepPolyhedron::operator = (from);
+  }
 };
 
 #endif /* G4POLYHEDRON_HH */
